Closed Bug 1634585 Opened 4 years ago Closed 4 years ago

Android implementation of mozilla::GetProcInfo returns nullptr

Categories

(GeckoView Graveyard :: Sandboxing, defect, P1)

Unspecified
Android

Tracking

(firefox78 fixed)

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: bugzilla, Assigned: bugzilla)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [fxr:p1][geckoview:m78])

Crash Data

Attachments

(1 file, 1 obsolete file)

None of the calling code expects this. We should either write a minimal implementation or at the very least unconditionally create and reject a promise.

Severity: -- → S3
Priority: -- → P2

Not a dupe. Don't get me wrong, we definitely need to implement bug 1529510. But this stubbed-out API should be returning a rejected promise, not nullptr.

...and we now have crashes in the wild as a result of this.

Crash Signature: [@ mozilla::MozPromise<T>::ThenInternal | mozilla::dom::ChromeUtils::RequestProcInfo ]

FxR is seeing this crash in the latest release.

Whiteboard: [fxr:p1]
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Priority: P2 → P1
Whiteboard: [fxr:p1] → [fxr:p1][geckoview:m78]

This is a simple fix to eliminate crashing. Proper implementation of this
function will be done in bug 1529510.

Pushed by aklotz@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/78e1e47675dc Return a rejected promise instead of nullptr from mozilla::GetProcInfo on Android; r=geckoview-reviewers,agi
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78

I think you've got the wrong bug number for this patch :-)

Flags: needinfo?(bbeurdouche)

Off by one, sorry about that : )

Flags: needinfo?(bbeurdouche)

Comment on attachment 9166907 [details]
Bug 1634585 - Set CKA_NSS_SERVER_DISTRUST_AFTER for Trustis FPS Root CA. r=kjacobs,jcj

Revision D85330 was moved to bug 1634584. Setting attachment 9166907 [details] to obsolete.

Attachment #9166907 - Attachment is obsolete: true
Has Regression Range: --- → yes
Keywords: regression

Moving isolated process bugs to the new GeckoView::Sandboxing component.

Component: General → Sandboxing
Product: GeckoView → GeckoView Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: