Bug 1634585: Return a rejected promise instead of nullptr from mozilla::GetProcInfo on Android; r=geckoview-reviewers,agi

This is a simple fix to eliminate crashing. Proper implementation of this
function will be done in bug 1529510.

Differential Revision: https://phabricator.services.mozilla.com/D76269