widget/android/ProcInfo.cpp
@@ -13,7 +13,7 @@ RefPtr<ProcInfoPromise> GetProcInfo(base::ProcessId pid, int32_t childId,
                                     const ProcType& type,
                                     const nsAString& origin) {
   // Not implemented on Android.
-  return nullptr;
+  return ProcInfoPromise::CreateAndReject(NS_ERROR_NOT_IMPLEMENTED, __func__);
 }
 
 }  // namespace mozilla
